# hypermodern-python

./: .coverage  .flake8  .pre-commit-config.yaml  console.py  mypy.ini  noxfile.py  pyproject.toml
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
