[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = ""
authors = ["UmutAlihan <alihandikel@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UmutAlihan/hypermodern-python"
repository = "https://github.com/UmutAlihan/hypermodern-python"
keywords = ["hypermodern", "python", "learning", "example"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100
